--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -7,3 +7,15 @@
         vertical-align: middle;
     }
 }
+.sweet-button {
+    padding: 10px 20px;
+    font-size: 14px;
+    font-weight: 600;
+    border-radius: 6px;
+}
+.bg-blue {
+    background-color: #1B69A1;
+}
+.color-white {
+    color: #fff;
+}
